# django-snacks

./: README.md  pyproject.toml
django-snacks/snacks/: tests.py  urls.py  views.py
django-snacks/snacks_project/: settings.py
django-snacks/templates/: about_us.html  base.html  home.html
snacks_project/: db.sqlite3
